--- a/oi-magistr-spolecne.tex
+++ b/oi-magistr-spolecne.tex
@@ -45,7 +45,8 @@
 \usepackage{wasysym} % znak vyplnene sipky
 \usepackage{setspace} % vyska radku
 \usepackage{changepage} % zmena okraju stranky
-\usepackage{soul}
+% \usepackage{soul}
+\usepackage{soulutf8}
 \usepackage{datetime} % datum a cas
 \usepackage{tabu} % vylepsene tabulky - ruzne siroke ohraniceni
 \usepackage{pgfgantt}
@@ -66,8 +67,13 @@
 
 \usepackage{_lib/qtree}
 
+
 \begin{document}
     \selectlanguage{czech}
+    
+    % \renewcommand{\hl}[1]{#1} % vypnuti/zapnuti zlutych zvyrazneni
+    \definecolor{blond}{rgb}{0.98, 0.94, 0.75}
+    \sethlcolor{blond}
 
     %%  Titulni strana  %%
     \rendercoverpage
